--- a/src/app/pages/profile/profile.html
+++ b/src/app/pages/profile/profile.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="min-h-screen bg-gray-900 text-white p-6">
+    <div class="min-h-screen w-full relative magenta-orb-bg text-white p-6">
 
         <!-- Top bar -->
         <div class="flex justify-between items-center mb-6">
