--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,7 +1,7 @@
-<div class="min-h-screen flex flex-col bg-gray-900 text-white">
+<div class="min-h-screen w-full relative magenta-orb-bg flex flex-col text-white">
 
   <!-- Top bar -->
-  <div class="flex items-center justify-between px-6 py-4 bg-gray-800 flex-shrink-0">
+  <div class="flex items-center justify-between px-6 py-4 bg-gray-800 flex-shrink-0 opacity-80">
     <!-- Logo -->
     <div class="text-2xl font-bold cursor-pointer" routerLink="/home">
       Cine<span class="text-red-500">Vault</span>
