--- a/src/app/pages/movie-details/movie-details.html
+++ b/src/app/pages/movie-details/movie-details.html
@@ -1,4 +1,12 @@
-<div class="min-h-screen bg-gray-900 text-white p-6">
+<div class="min-h-screen w-full relative magenta-orb-bg text-white p-6">
+    <!-- Back Button -->
+  <button
+  (click)="goBack()"
+  class="flex items-center gap-2 text-gray-300 hover:text-white transition mb-6"
+>
+  <span class="text-xl">←</span>
+  <span class="text-sm">Back to Home</span>
+</button>
     <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-6">
       
       <!-- Left side -->
