--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 @import "tailwindcss";
 @layer utilities;
+
+.magenta-orb-bg {
+    background: #020617;
+    background-image:
+      linear-gradient(to right, rgba(71,85,105,0.15) 1px, transparent 1px),
+      linear-gradient(to bottom, rgba(71,85,105,0.15) 1px, transparent 1px),
+      radial-gradient(circle at 50% 60%, rgba(236,72,153,0.15) 0%, rgba(168,85,247,0.05) 40%, transparent 70%);
+    background-size: 40px 40px, 40px 40px, 100% 100%;
+  }
+  
